// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Menu > closed 1`] = `
<div
  class="sc-bcXGCL hNHwdq"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu > custom color 1`] = `
<div
  class="sc-bcXGCL czsTlN"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu > custom duration 1`] = `
<div
  class="sc-bcXGCL eeJWaS"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu > initial open 1`] = `
<div
  class="sc-bcXGCL hZteQD"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu > position left 1`] = `
<div
  class="sc-bcXGCL dwILLQ"
>
  <div>
    content
  </div>
</div>
`;

exports[`Menu > position left closed 1`] = `
<div
  class="sc-bcXGCL dKmNBl"
>
  <div>
    content
  </div>
</div>
`;
